# karate-kihon-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: android-build-validation.yml
android/KarateClipRecorder/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: architecture.md  data-storage-strategy.md  mediapipe-integration-spike.md  snapshot-renderer-design.md  strike-event-timeline-design.md
docs/app/: guided-jodan-clip-recorder.md
input/: .gitignore
output/: .gitignore
src/karate_analyzer/: __init__.py  __main__.py  analysis_pipeline.py  angle_analyzer.py  chin_reference.py  frame_extractor.py  hand_impact_reference.py  impact_frame_selector.py  jodan_height_analyzer.py  jodan_reference.py  landmark_model.py  main.py  mediapipe_extension_explorer.py  mediapipe_pose_spike.py  pose_engine.py  punch_detector.py  punch_sequence.py  report_writer.py  session_analyzer.py  snapshot_renderer.py  synthetic_session.py  video_reader.py
src/karate_app/: __init__.py
tests/: test_analysis_pipeline.py  test_angle_analyzer.py  test_chin_reference.py  test_frame_extractor.py  test_hand_impact_reference.py  test_impact_frame_selector.py  test_jodan_height_analyzer.py  test_jodan_reference.py  test_mediapipe_extension_explorer.py  test_mediapipe_pose_spike.py  test_punch_detector.py  test_punch_sequence.py  test_session_analyzer.py  test_snapshot_renderer.py  test_strike_detector_engine.py  test_synthetic_session.py
tests/analyzers/: test_jodan_height_analyzer.py
tests/app/: test_guided_jodan_session.py
(+96 files in other folders)
